# Flower_project

./: README.md
fl_project/: README.md  classic.ipynb  fed_avg_metrics.json  fed_avg_metrics_sgd.json  prox_metrics.json  pyproject.toml
fl_project/engine/: best_local_params.json  client_1.py  client_2.py  client_3.py  client_4.py  client_5.py  client_6.py  model.py  optuna.ipynb  sample_test.ipynb  server.py  tools.py
fl_project/engine/data/: IID_2.csv  cl_[1, 2, 3, 4, 5, 6]  df1.csv  df2.csv  df3.csv  df4.csv  df5.csv  df6.csv  noniid_df_1.csv  noniid_df_2.csv  noniid_df_3.csv  noniid_df_4.csv  noniid_df_5.csv  noniid_df_6.csv
fl_project/fl_project/: tools.py
fl_project/fl_project/data/: IID.csv  NON_IID.csv  NON_IID_FL_1.csv
fl_project/fl_project/transformers/: poly_noniid.pkl  scaler_iid.pkl  scaler_noniid.pkl
fl_project/main/: client_1.py  client_2.py  model.py  tools.py
fl_project/main/data/: IID_1.csv  TEST_SAMPLE.csv
fl_project/tests/: sample_test.ipynb  test_engine.py
fl_project/wandb/run-20250213_125204-y54kvtkb/: run-y54kvtkb.wandb
fl_project/wandb/run-20250224_153629-t2etwzhp/: run-t2etwzhp.wandb
fl_project/wandb/run-20250224_154037-0r6cuy9j/: run-0r6cuy9j.wandb
fl_project/wandb/run-20250224_154331-jaakm47q/: run-jaakm47q.wandb
fl_project/wandb/run-20250224_154528-26bn00jb/: run-26bn00jb.wandb
fl_project/wandb/run-20250224_154802-u4w9cbjj/: run-u4w9cbjj.wandb
fl_project/wandb/run-20250224_160159-sudmxll3/: run-sudmxll3.wandb
fl_project/wandb/run-20250224_160449-yry4nwj8/: run-yry4nwj8.wandb
(+334 files in other folders)
