[tool.poetry]
name = "fl-project"
version = "0.1.0"
description = ""
authors = ["AstemirGongapshev <astemirgongapshev6194@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flwr = "^1.14.0"
imbalanced-learn = "^0.13.0"
torch = "^2.5.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
pytest = "^8.3.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"